--- a/src/main/resources/templates/bookDetails.html
+++ b/src/main/resources/templates/bookDetails.html
@@ -13,6 +13,8 @@
        <li th:each="author : ${book.getAuthors()}" th:text="${author.getName()}"></li>
     </ul>
 </section>
-
+<form th:method="POST" th:action="@{/delete}">
+    <input type='submit'  value='Delete'>
+</form>
 </body>
 </html>
